--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/softwarebyze/tennis-ranking-api/issues"
   },
-  "homepage": "https://github.com/softwarebyze/tennis-ranking-api#readme"
+  "homepage": "https://github.com/softwarebyze/tennis-ranking-api#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "request": "^2.88.2"
+  }
 }
